fix: heading position when not showing threading

--- a/src/bullet_threading.scss
+++ b/src/bullet_threading.scss
@@ -35,10 +35,19 @@
     height: 26px !important;
   }
 
+  /* Fix for headings like h1, h2 etc */
+  > .items-baseline {
+    align-items: initial;
+  }
+
   &:not(:focus-within) .bullet {
     background-color: var(--ls-block-bullet-color);
     transform: scale(1);
     box-shadow: none;
+  }
+
+  &:not(:focus-within) > .items-baseline {
+    align-items: baseline;
   }
 
   /* Basic "curve" */
@@ -76,11 +85,6 @@
 
   .block-children:focus-within > .ls-block:focus-within ~ .ls-block::before {
     border-color: transparent;
-  }
-
-  /* Fix for headings like h1, h2 etc */
-  > .items-baseline {
-    align-items: initial;
   }
 
   /* Fix multi-line blocks with children */
